# pointcloud

./: CMakeLists.txt  README.md
inc/: CloudCompare.h  camera.h  filter.h  opencv.h  opencvGetSquare.h  pclNormalization.h  pointcloud.h  twoPointCloudCompare.h  twocamera.h
src/: CloudCompare.cpp  camera.cpp  cameraGyro.cpp  filter.cpp  opencv.cpp  opencvGetSquare.cpp  pclNormalization.cpp  pointcloud.cpp  ros.cpp  seePLY.cpp  twoPointCloudCompare.cpp
testcloud/: sphere.ply
